crates/vescpkg-rs/tests/ui/motor_semantics_not_interchangeable.stderr
error[E0308]: mismatched types
  --> tests/ui/motor_semantics_not_interchangeable.rs:15:25
   |
15 |     total_motor_current(current);
   |     ------------------- ^^^^^^^ expected `TotalMotorCurrent`, found `MotorCurrent`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui/motor_semantics_not_interchangeable.rs:6:4
   |
 6 | fn total_motor_current(_: TotalMotorCurrent) {}
   |    ^^^^^^^^^^^^^^^^^^^ --------------------

error[E0308]: mismatched types
  --> tests/ui/motor_semantics_not_interchangeable.rs:16:19
   |
16 |     input_current(current);
   |     ------------- ^^^^^^^ expected `InputCurrent`, found `MotorCurrent`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui/motor_semantics_not_interchangeable.rs:7:4
   |
 7 | fn input_current(_: InputCurrent) {}
   |    ^^^^^^^^^^^^^ ---------------

error[E0308]: mismatched types
  --> tests/ui/motor_semantics_not_interchangeable.rs:17:15
   |
17 |     d_current(current);
   |     --------- ^^^^^^^ expected `DCurrent`, found `MotorCurrent`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui/motor_semantics_not_interchangeable.rs:8:4
   |
 8 | fn d_current(_: DCurrent) {}
   |    ^^^^^^^^^ -----------

error[E0308]: mismatched types
  --> tests/ui/motor_semantics_not_interchangeable.rs:18:16
   |
18 |     duty_cycle(SignedRatio::from_ratio_const(0.5));
   |     ---------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `DutyCycle`, found `SignedRatio`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui/motor_semantics_not_interchangeable.rs:9:4
   |
 9 | fn duty_cycle(_: DutyCycle) {}
   |    ^^^^^^^^^^ ------------

error[E0308]: mismatched types
  --> tests/ui/motor_semantics_not_interchangeable.rs:19:19
   |
19 |     brake_current(current);
   |     ------------- ^^^^^^^ expected `BrakeCurrent`, found `MotorCurrent`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/ui/motor_semantics_not_interchangeable.rs:10:4
   |
10 | fn brake_current(_: BrakeCurrent) {}
   |    ^^^^^^^^^^^^^ ---------------
